--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-17  Gary V. Vaughan  <gvv@techie.com>
+
+	* ltmain.in: cygwin-1.1.0 and higher no longer grok backslash path
+	separators.
+
 2000-05-14  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
 	* libtool.m4 (AC_LIBLTDL_CONVENIENCE, AC_LIBLTDL_INSTALLABLE):
