--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-26  Art Pope  <apope@sarnoff.com>
+
+	* ltcf-cxx.sh: Examine $CC when recognizing the C++ compiler
+	(it defaults to $CXX), and look at only its basename.
+
 2000-05-26  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
 	* configure.in (GCJ): Check.
