--- a/THANKS
+++ b/THANKS
@@ -12,6 +12,7 @@ and generally assist in the libtool maintainership process:
 
 Akim Demaille <demaille@inf.enst.fr>
 Andrey Slepuhin <pooh@msu.ru>
+Art Pope <apope@sarnoff.com>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Chris P. Ross <cross@eng.us.uu.net>
