--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,13 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.3.5: 2000-05-27, CVS version 1.3.4a, Libtool team:
+* Support for *-sequent-sysv4.
+* Support recent dlltool formats.
+* Bugfixes.
+
 New in 1.3.4: 1999-12-08, CVS version 1.3.3a, Libtool team:
 * Support for Compaq Tru64 V5.0.
-* Improved support for Digatal Unix V4.*.
+* Improved support for Digital Unix V4.*.
 * Improved support for NetBSD, FreeBSD and Unixware.
 * Many fine bugfixes.
 
