--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-27  Chris Lattner  <sabre@skylab.org>
+
+	* ltconfig.in (*-sequent-sysv4): New Port.
+
 2000-05-17  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltmain.in: cygwin-1.1.0 and higher no longer grok backslash path
