--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-27  Chad Cunningham  <ccunning@math.ohio-state.edu>
+ 	
+	* ltconfig.in (rhapsody*): New Port.
+	* ltmain.in (rhapsody*): ditto.
+ 
 2000-05-27  Chris Lattner  <sabre@skylab.org>
 
 	* ltconfig.in (*-sequent-sysv4): New Port.
