--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,7 @@ New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
 * m4 macros needed to configure libltdl split out into libltdl/ltdl.m4.
 * Improved support for mingw32, Compaq Tru64 V5.0 and Digital Unix V4.*.
 * Support for *-sequent-sysv4.
+* Support for mac OS X (rhapsody).
 * Many bugfixes (especially in libltdl)
 
 New in 1.3.4: 1999-12-08, CVS version 1.3.3a, Libtool team:
