--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-27  Gary V. Vaughan  <gvv@techie.com>
+
+	* README-alpha: note new location of config.(guess|sub).
+
 2000-05-27  Chad Cunningham  <ccunning@math.ohio-state.edu>
  	
 	* ltconfig.in (rhapsody*): New Port.
