* README-alpha: note new location of config.(guess|sub).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,14 @@
-2000-05-27  Chad Cunningham  <ccunning@math.ohio-state.edu>
-	
-	* ltconfig.in (rhapsody*): New Port.
-	* ltmain.in (rhapsody*): ditto.
-
 2000-05-27  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltmain.in: cygwin-1.1.0 and higher no longer grok backslash path
 	separators.
+	
+	* README-alpha: note new location of config.(guess|sub).
+
+2000-05-27  Chad Cunningham  <ccunning@math.ohio-state.edu>
+	
+	* ltconfig.in (rhapsody*): New Port.
+	* ltmain.in (rhapsody*): ditto.
 
 2000-05-27  Chris Lattner  <sabre@skylab.org>
 
