--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-05-27  Gary V. Vaughan  <gvv@techie.com>
 
+	* configure.in: bumped version to 1.3.5a
+
 	GNU libtool 1.3.5 was released.
 
 	* config.guess: updated from autoconf cvs.
