* ltconfig.in: check for dlfcn.h: include return value to make -Wall in CFLAGS work.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-29  Michael Matz  <matz@ifh.de>       
+       
+	* ltconfig.in: check for dlfcn.h: include return value
+	to make -Wall in CFLAGS work.  
+
 2000-05-27  Ossama Othman  <ossama@debian.org>
 
 	* ltmain.in: Make sure $arg is set when linking `.lo' files into a
