--- a/NEWS
+++ b/NEWS
@@ -1,15 +1,40 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 1.3d: 1999-??-??; CVS version 1.3c, Libtool team:
-* Start of support code for cross-compiling to win32.
-* Improved support for mingw32.
-* New "-no-install" flag to avoid the use of executable wrapper scripts.
-* New --with-pic flag to control the generation of PIC/non-PIC code.
+New in 1.4b: 2000-??-??; CVS version 1.4a, Libtool team:
+* Full support for C++ compiler.
+* Support for GNU gcj compiler.
+
+New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
+* New -no-install flag to avoid the use of executable wrapper scripts.
+* New --with-pic, -prefer-pic and -prefer-non-pic flags to control
+  the generation of PIC/non-PIC code.
 * New --build flag to ltconfig to help with build cross compilation
   environments is inherited from --build flag passed to configure.
-* Various bugfixes
+* Support for hardcoding run-time paths (-R) into libraries.
+* Support -dlopen and -dlpreopen for libraries.
+* Libtool now allows you to link shared libraries against static code.
+* New functions in libltdl:
+  lt_dlgetinfo, lt_dlforeach provide access to module specific data in handles.
+  lt_dlloader_next, lt_dlloader_name, lt_dlloader_find, lt_dlloader_add and
+  lt_dlloader_remove can be used for adding new types of module loaders.
+  lt_dladderror, lt_dlseterror integrate user module loaders with lt_dlerror.
+* "-Xcompiler" and "-Wc," does now work in compile mode, too.
+* Support recent dlltool formats.
+* Start of support code for cross-compiling to win32.
+* libltdl can now be built as a dll with win32.
+* m4 macros needed to configure libltdl split out into libltdl/ltdl.m4.
+* Improved support for mingw32, Compaq Tru64 V5.0 and Digital Unix V4.*.
+* Initail support for ia64 linux.
+* Many bugfixes (especially in libltdl)
 
-New in 1.3.4: 1999-??-??, CVS version 1.3.3a, Libtool team:
+New in 1.3.5: 2000-05-27, CVS version 1.3.4a, Libtool team:
+* Support for mac OS X (rhapsody).
+* Support for *-sequent-sysv4.
+* Support for Cygwin-1.1.0.
+* Support recent dlltool formats.
+* Bugfixes.
+
+New in 1.3.4: 1999-12-08, CVS version 1.3.3a, Libtool team:
 * Support for Compaq Tru64 V5.0.
 * Improved support for NetBSD, FreeBSD and Unixware.
 * Many fine bugfixes.
