--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-29  Gary V. Vaughan  <gvv@techie.com>
+
+	* NEWS: Updated.
+
 2000-05-29  Bernhard Rosenkraenzer <bero@redhat.de>
  
 	* libtool.m4: adding ia64 as supported linux platform
