--- a/NEWS
+++ b/NEWS
@@ -20,9 +20,15 @@ New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
 * libltdl can now be built as a dll with win32.
 * m4 macros needed to configure libltdl split out into libltdl/ltdl.m4.
 * Improved support for mingw32, Compaq Tru64 V5.0 and Digital Unix V4.*.
-* Support for *-sequent-sysv4.
-* Support for mac OS X (rhapsody).
+* Initail support for ia64 linux.
 * Many bugfixes (especially in libltdl)
+
+New in 1.3.5: 2000-05-27, CVS version 1.3.4a, Libtool team:
+* Support for mac OS X (rhapsody).
+* Support for *-sequent-sysv4.
+* Support for Cygwin-1.1.0.
+* Support recent dlltool formats.
+* Bugfixes.
 
 New in 1.3.4: 1999-12-08, CVS version 1.3.3a, Libtool team:
 * Support for Compaq Tru64 V5.0.
