--- a/NEWS
+++ b/NEWS
@@ -20,7 +20,8 @@ New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
 * libltdl can now be built as a dll with win32.
 * m4 macros needed to configure libltdl split out into libltdl/ltdl.m4.
 * Improved support for mingw32, Compaq Tru64 V5.0 and Digital Unix V4.*.
-* Initail support for ia64 linux.
+* Initial support for ia64 linux.
+* Initial support for a.out freebsd shared libs.
 * Many bugfixes (especially in libltdl)
 
 New in 1.3.5: 2000-05-27, CVS version 1.3.4a, Libtool team:
