--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-05-30  Gary V. Vaughan  <gvv@techie.com>
+
+	* ltconfig.in (netbsd*): archive_cmds and archive_expsym_cmds
+	were reversed with respect to definition of __ELF__.
+	From Keisuke Inoue <keisuke@csl.sony.co.jp>
+
 2000-05-29  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4 (netbsd*): Use -L option to file_magic_cmd as for
