--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-17  Syd Polk  <spolk@redhat.com>
+
+	* libtool.m4 (AC_LIBTOOL_SETUP): Do not generate a libtool based
+	on target; use host instead.
+
 2000-05-27  Gary V. Vaughan  <gvv@techie.com>
 
 	* configure.in: bumped version to 1.3.5a
