--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-17  Syd Polk  <spolk@redhat.com>
+
+	* libtool.m4 (AC_LIBTOOL_SETUP): Do not generate a libtool based
+	on target; use host instead.
+	* ltdl.m4 (AC_LTDL_SYSSEARCHPATH): Likewise.
+
 2000-06-10  Ossama Othman  <ossama@debian.org>
 
 	* libtool.m4: Updated comment.
