--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-10  Alexandre Oliva  <aoliva@lsd.ic.unicamp.br>
+
+	* libtool.m4 (lt_cv_deplibs_check_method, freebsd): Do not depend
+	on $version_type; check for ELF support as in other BSDs.
+
 2000-06-17  Syd Polk  <spolk@redhat.com>
 
 	* libtool.m4 (AC_LIBTOOL_SETUP): Do not generate a libtool based
