--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-10  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* ltcf-cxx.sh (archive_cmds, irix): Added -Wl to -update_registry
+	and its argument when gcc is the compiler.
+
 2000-07-10  Alexandre Oliva  <aoliva@lsd.ic.unicamp.br>
 
 	* libtool.m4 (lt_cv_deplibs_check_method, freebsd): Do not depend
