--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-10  Alexandre Oliva  <aoliva@lsd.ic.unicamp.br>
+
+	* ltconfig.in (dynamic_linker, linux, powerpc): Do not disable
+	shared libraries just because of MkLinux.
+
 2000-06-17  Syd Polk  <spolk@redhat.com>
 
 	* libtool.m4 (AC_LIBTOOL_SETUP): Do not generate a libtool based
