--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-07-10  Alexandre Oliva  <aoliva@lsd.ic.unicamp.br>
 
+	* ltconfig.in (dynamic_linker, linux, powerpc): Do not disable
+	shared libraries just because of MkLinux.
+
 	* libtool.m4 (lt_cv_deplibs_check_method, freebsd): Do not depend
 	on $version_type; check for ELF support as in other BSDs.
 
