--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-07-10  Alexandre Oliva  <aoliva@lsd.ic.unicamp.br>
 
+	* ltconfig.in (wlarc, netbsd, aout): Set to empty.
+	(hardcode_dynamic_flag_spec, export_dynamic_flag_spec): Use it.
+
 	* ltconfig.in (dynamic_linker, linux, powerpc): Do not disable
 	shared libraries just because of MkLinux.
 
