--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2000-07-10  Alexandre Oliva  <aoliva@lsd.ic.unicamp.br>
 
+	* ltcf-c.sh (wlarc, netbsd, aout): Set wlarc to empty.
+	(hardcode_dynamic_flag_spec, export_dynamic_flag_spec): Use
+	wlarc instead of wl.
+	* ltcf-gcj.sh (wlarc, netbsd, aout): Set wlarc to empty.
+	(hardcode_dynamic_flag_spec, export_dynamic_flag_spec): Use
+	wlarc instead of wl.
+
 	* ltconfig.in (dynamic_linker, linux, powerpc): Do not disable
 	shared libraries just because of MkLinux.
 
