--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-10  Mo DeJong  <mdejong@redhat.com>
+
+	* libtool.m4 (AC_PROG_NM): Fix macro so that it
+	finds a cross NM on the PATH.
+
 2000-07-10  Ken Block <block@zk3.dec.com>
 
 	* libltdl/ltdl.h: Also check for __cplusplus, __STDC__ is not
