--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2000-07-19  H.J. Lu  <hjl@gnu.org>,  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* ltcf-c.sh, ltcf-cxx.sh: Check if -lc is necessary for building
+	shared library.
+	* ltcf-gcj.sh: Assume -lc is implicitly linked in.
+	* ltconfig.in: Set build_libtool_need_lc to indicate it.
+	* ltmain.in: Add -lc when building shared libary only if
+	necessary.
+
 2000-07-10  Mo DeJong  <mdejong@redhat.com>
 
 	* libtool.m4 (AC_PROG_NM): Fix macro so that it
