* ltmain.in (ILD): Fix addition of deplibs in relink case.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-24  Nick Hudson <skrll@netbsd.org>
+
+	* ltmain.in (ILD): Fix addition of deplibs in relink case.
+
 2000-07-18  H.J. Lu  <hjl@gnu.org>
 
 	* ltconfig.in: Check if -lc is necessary for building shared
