--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-24  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* ltcf-c.sh (linkopts): Don't set for test.
+	* ltcf-cxx.sh (linkopts): Likewise.
+
 2000-07-24  Nick Hudson <skrll@netbsd.org>
 
 	* ltcf-cxx.sh (linkopts): Replace with linker_flags.
